# agent-eval

./: .gitignore  PROJECT_STORY.md  PROJECT_STORY_EN.md  README.md  README_CN.md  docker-compose.yml
.qoder/: plan.md
backend/: alembic.ini  eval_service.py  pyproject.toml
backend/agent/: __init__.py  runtime.py  runtime_web.py
backend/agent/brain/: __init__.py  api_client.py  base.py  executor.py  parser.py  registry.py
backend/agent/gateway/: __init__.py  base.py  ratelimit.py  router.py  telegram.py
backend/agent/scheduler/: __init__.py  base.py  manager.py  models.py
backend/agent/tests/: conftest.py  test_brain.py  test_gateway.py  test_integration.py  test_runtime.py  test_runtime_web.py  test_scheduler.py
backend/api/: __init__.py  alerts.py  brain.py  case_sets.py  cases.py  ingest.py  runs.py  stats.py  tasks.py
backend/case_set_results/: __init__.py  calculator.py  policy.py  service.py
backend/core/: config.py  database.py  models.py
backend/dashboard/: brain.html  index.html
backend/evaluators/: __init__.py  base.py  generation.py  intent.py  outcome.py  registry.py  retrieval.py  tool.py
backend/migrations/: env.py
backend/runner/: __init__.py  engine.py  llm_judge.py
backend/scripts/: seed_data.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_brain_api.py  test_case_set_results.py  test_e2e_eval.py  test_evaluators.py  test_orchestrator.py  test_otel_span_mapping.py
backend/workers/: __init__.py  eval_worker.py  ingest_worker.py
sdk/: pyproject.toml
sdk/agent_eval_sdk/: __init__.py  reporter.py
(+35 files in other folders)
